Add hits counter
