# docs/swagger.yaml
@@ -3,25 +3,34 @@ definitions:
   routes.addURLRequestPayload:
     properties:
       key:
+        description: Key for which the association should be added
         type: string
       url:
+        description: URL to add for the key
         type: string
     type: object
   routes.deleteURLRequestPayload:
     properties:
       key:
+        description: Key for which the association should be deleted
         type: string
     type: object
   routes.infoRequestPayload:
     properties:
       key:
+        description: Key for which information is requested
         type: string
     type: object
   routes.infoResponsePayload:
     properties:
+      hits:
+        description: Number of times the url has been requested
+        type: integer
       key:
+        description: Key for which information was requested
         type: string
       url:
+        description: URL to redirect to
         type: string
     type: object
 host: localhost:8080
